# openrelik-worker-strings

./: Dockerfile  README.md  openrelik.yaml  pyproject.toml
src/: app.py  tasks.py
