[tool.poetry]
name = "openrelik-worker-strings"
version = "0.2.0"
description = "Extract strings from files"
authors = ["Johan Berggren <jberggren@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = { extras = ["redis"], version = "^5.4.0" }
openrelik-worker-common = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
