[tool.poetry]
name = "openrelik-worker-strings"
version = "0.2.1"
description = "Extract strings from files"
authors = ["Johan Berggren <jberggren@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
celery = { extras = ["redis"], version = "^5.4.0" }
openrelik-common = { git = "https://github.com/rgayon/openrelik-common.git", branch = "otel-init2"}
openrelik-worker-common = "^0.12.0"
opentelemetry-instrumentation-celery = "^0.53b1"
opentelemetry-exporter-otlp = "1.32.1"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
